--- a/4 - Tensorflow Avanzato/model_import.ipynb
+++ b/4 - Tensorflow Avanzato/model_import.ipynb
@@ -6,7 +6,7 @@
       "name": "model_import.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNjepfXBPt7XC5EjJ7LLZjO",
+      "authorship_tag": "ABX9TyMDadZ/JHV3SJoNsUDXFBna",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3Bo_madI_veo",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Importare una Rete Neurale\n",
+        "Dopo aver visto come salvare una rete su disco, al termine dell'addestramento e durante, vediamo come possiamo re-importarla e utilizzarla per fare predizioni."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vnoDw5XX_4gl",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Importiamo i Moduli"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "QlPrSGn3EpNw",
@@ -36,8 +57,19 @@
         "import tensorflow as tf\n",
         "import numpy as np"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Gp6Ua_gX_8wP",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Importiamo la Rete Neurale\n",
+        "Importare la Rete è estremamente semplice, ci basta utilizzare la funzione *load_model* di tf.keras."
+      ]
     },
     {
       "cell_type": "code",
@@ -49,8 +81,19 @@
       "source": [
         "model = tf.keras.models.load_model('model_mnist_2.h5')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7WmbJ80bAHYV",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Eseguiamo delle predizioni\n",
+        "Adesso possiamo utilizzare la rete per eseguire predizioni su nuovi dati, prima applichiamo le trasformazioni necessarie all'immagine."
+      ]
     },
     {
       "cell_type": "code",
@@ -64,24 +107,34 @@
         "img = np.array(img)\n",
         "img = np.expand_dims(img, axis=0)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JPP5HD3XAQWa",
+        "colab_type": "text"
+      },
+      "source": [
+        "poi utilizziamo il metodo *predict* per ottenere la predizione."
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "C_mz3_02F4tp",
         "colab_type": "code",
-        "outputId": "02ddbf9d-5fc4-4114-8762-5193950bf654",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "02ddbf9d-5fc4-4114-8762-5193950bf654"
       },
       "source": [
-        "model.predict_classes(img)"
+        "model.predict(img)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -96,6 +149,29 @@
           "execution_count": 20
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bJAhaDHzAWyt",
+        "colab_type": "text"
+      },
+      "source": [
+        "Semplice semplice :)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HDvOUqbLAX8B",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
