--- a/3 - Funzioni di costo, attivazione e ottimizzazione/learningrate_momentum_rmsprop.ipynb
+++ b/3 - Funzioni di costo, attivazione e ottimizzazione/learningrate_momentum_rmsprop.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled45.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOCeSD/QkmhjIqMQrk52pJ8",
+      "authorship_tag": "ABX9TyMFkvZqbGv/xX76e0wLyhaM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1752,7 +1752,18 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "# Learning Rate e Momentum\n",
+        "In questo notebook vedremo come utilizzare Learning Rate e Momentum per migliorare la fase di addestramento di una Rete Neurale"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fCXh_b98Xy9U",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Importiamo i Moduli"
       ]
     },
     {
@@ -1773,8 +1784,18 @@
         "\n",
         "from time import time"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UkVxK_ndXvZZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Prepariamo i Dati"
+      ]
     },
     {
       "cell_type": "code",
@@ -1876,7 +1897,7 @@
         "X_train = X_train/255\n",
         "X_test = X_test/255"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2041,6 +2062,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0D360UU1X3Ht",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Creiamo la Rete Neurale\n",
+        "Definiamo due funzioni, una per definire l'architettura delle Rete e un'altra per creare un grafico della Log Loss."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "T0ODzp3u4Dqd",
@@ -2072,7 +2104,7 @@
         "\n",
         "  plt.legend()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2082,7 +2114,19 @@
         "colab_type": "text"
       },
       "source": [
-        "## Learning Rate"
+        "## Learning Rate\n",
+        "Il Learning Rate ci permette di controllare la dimensione di ogni step del Gradient Descent. Per  impostare il learning rate possiamo definire l'algoritmo di ottimizzazione tramite una delle apposite classi di tf.keras e utilizzare il parametro *learning_rate*."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "evta2qLvYi17",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### Learning Rate troppo piccolo\n",
+        "Un valore del Learning Rate troppo piccolo può rendere eccessivamente piccoli gli step del Gradient Descent, rallentando la fase di addestramento in maniera eccessiva."
       ]
     },
     {
@@ -2106,7 +2150,7 @@
         "          validation_data=(X_test, y_test), validation_batch_size = X_test.shape[0], \n",
         "          epochs=10, callbacks=[tf.keras.callbacks.History()])"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2149,6 +2193,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ihQSV25TYxoj",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Learning Rate troppo grande\n",
+        "Un valore troppo grande del Learning Rate rende gli step del Gradient Descent troppo larghi, facendo divergere il modello."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "GBybnPGe43YF",
@@ -2169,7 +2224,7 @@
         "          validation_data=(X_test, y_test), validation_batch_size = X_test.shape[0], \n",
         "          epochs=10, callbacks=[tf.keras.callbacks.History()])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2212,6 +2267,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iOCsIxTqZF2R",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Learning Rate ottimale\n",
+        "Il valore ottimale del Learning Rate varia da problema a problema e andrebbe cercato in una scala logaritmica che va da 0.0001 a 10 (0.0001, 0.001, 0.01, 0.1, 1, 10)."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "0eoydJu-5kfQ",
@@ -2232,7 +2298,7 @@
         "          validation_data=(X_test, y_test), validation_batch_size = X_test.shape[0], \n",
         "          epochs=10, callbacks=[tf.keras.callbacks.History()])"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2281,7 +2347,22 @@
         "colab_type": "text"
       },
       "source": [
-        "## Learning Rate Dinamico"
+        "## Learning Rate Dinamico\n",
+        "Una scelta intelligente è quella di far variare il valore del Learning Rate durante l'addestramento, rendendolo più piccolo man mano che il modello inizia a convergere. Questa tecnica è conosciuta come **Learning Rate Decay**. Esistono diverse tecniche per implementare il Learning Rate Decay, vediamone due."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "D6CSUBinaNlr",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Exponential Decay\n",
+        "Questa tecnica riduce il Learning Rate in maniera esponenziale utilizzando il seguente algoritmo:\n",
+        "<br><br>\n",
+        "*initial_learning_rate * decay_rate ^ (step / decay_steps)*\n",
+        "<br><br>\n"
       ]
     },
     {
@@ -2310,7 +2391,7 @@
         "          validation_data=(X_test, y_test), validation_batch_size = X_test.shape[0], \n",
         "          epochs=10, callbacks=[tf.keras.callbacks.History()])"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2353,6 +2434,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6jUbdwQla2bR",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Inverse Time Decay\n",
+        "Un'alternativa all'Exponential Decay è l'Inverse Time Decay, che sistema il valore del Learning Rate utilizzando il seguente algoritmo:\n",
+        "<br><br>\n",
+        "*initial_learning_rate / (1 + decay_rate * step / decay_step)*\n",
+        "<br><br>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "lov-4YxG6ipo",
@@ -2378,7 +2473,7 @@
         "          validation_data=(X_test, y_test), validation_batch_size = X_test.shape[0], \n",
         "          epochs=10, callbacks=[tf.keras.callbacks.History()])"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2450,7 +2545,7 @@
         "          validation_data=(X_test, y_test), validation_batch_size = X_test.shape[0], \n",
         "          epochs=10, callbacks=[tf.keras.callbacks.History()])"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2512,7 +2607,7 @@
         "          validation_data=(X_test, y_test), validation_batch_size = X_test.shape[0], \n",
         "          epochs=10, callbacks=[tf.keras.callbacks.History()])"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2559,11 +2654,11 @@
       "metadata": {
         "id": "KBqXQK7N7ATf",
         "colab_type": "code",
-        "outputId": "4c4a12a7-2615-4693-beba-c33d74569685",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 381
-        }
+        },
+        "outputId": "4c4a12a7-2615-4693-beba-c33d74569685"
       },
       "source": [
         "model = build_model()\n",
@@ -2580,7 +2675,7 @@
         "          validation_data=(X_test, y_test), validation_batch_size = X_test.shape[0], \n",
         "          epochs=10, callbacks=[tf.keras.callbacks.History()])"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
