--- a/3 - Funzioni di costo, attivazione e ottimizzazione/learningrate_momentum_rmsprop.ipynb
+++ b/3 - Funzioni di costo, attivazione e ottimizzazione/learningrate_momentum_rmsprop.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled45.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMFkvZqbGv/xX76e0wLyhaM",
+      "authorship_tag": "ABX9TyP3Ndj7HQsfQmQrlN/ARGTb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2518,11 +2518,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Yh0noN8N7D70",
+        "id": "DXxk2w_Q6hrj",
         "colab_type": "text"
       },
       "source": [
-        "## RMSProp e ADAM"
+        "### RMSprop\n",
+        "L'RMSprop è un'algoritmo di ottimizzazione che incorpora al suo interno un learning rate adattivo, che non tocca a noi ottimizzare e che può anche variare da feature a feature"
       ]
     },
     {
@@ -2588,6 +2589,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Yh0noN8N7D70",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Il Momentum\n",
+        "Il Momentum è un concetto che deriva dalla fisica ed è la misura di una massa in movimento, cioè ci permette di quantificare la *quantità di moto*. Durante l'addestramento di una rete neurale possiamo sfruttare il Momentum per tentare di saltare eventuali minimi locali e raggiungere minimi globali.\n",
+        "\n",
+        "## ADAM\n",
+        "Ad oggi l'Adam è l'algoritmo di ottimizzazione più performante nella maggior parte dei casi, ed è semplicemente una variante del RMSprop che implementa anche il Momentum."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "NNo2OTen7iUR",
@@ -2647,6 +2662,16 @@
           },
           "execution_count": 26
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lcRgyiQi7UI0",
+        "colab_type": "text"
+      },
+      "source": [
+        "Qualora volessimo possiamo anche utilizzare un learning rate, o una funzione per il learning rate adattivo, anche con l'Adam, RMSprop o qualsiasi altro algoritmo di ottimizzazione, ma non è sempre una buona idea dato che queste funzioni utilizzano delle tecniche abbastanza sofisticate per selezionare un learning rate dinamico per ogni features."
       ]
     },
     {
