--- a/3 - Funzioni di costo, attivazione e ottimizzazione/learningrate_momentum_rmsprop.ipynb
+++ b/3 - Funzioni di costo, attivazione e ottimizzazione/learningrate_momentum_rmsprop.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled45.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP3Ndj7HQsfQmQrlN/ARGTb",
+      "authorship_tag": "ABX9TyOjLxICUMbdVIS0HbwFwXcn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2740,6 +2740,17 @@
           },
           "execution_count": 30
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WcldDyCT8CeF",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Adamax\n",
+        "L'Adamax è una variante dell'Adam progettata per funzionare meglio quando le nostre features sono contenute in una matrice sparsa (molto comune in problemi di NLP e non solo). In questo caso conviene anche utilizzare la *Sparse Categorical Crosse Entropy* (sparse_categorical_crossentropy) come funzione di costo da ottimizzare."
       ]
     }
   ]
