--- a/5 - Reti Neurali Convoluzionali/convnet.ipynb
+++ b/5 - Reti Neurali Convoluzionali/convnet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled54.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOTpxjzRmIoYEmEKtYTM2gg",
+      "authorship_tag": "ABX9TyMvKyYc0QSz8gos0aCtN76k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2565,9 +2565,9 @@
       "source": [
         "model = Sequential()\n",
         "\n",
-        "model.add(Conv2D(filters=32, kernel_size=2, padding='same', activation='relu', input_shape=(150, 150, 1)))\n",
+        "model.add(Conv2D(filters=32, kernel_size=2, padding='same', strides=(1, 1), activation='relu', input_shape=(150, 150, 1)))\n",
         "model.add(MaxPooling2D(pool_size=3, strides=3))\n",
-        "model.add(Conv2D(filters=32, kernel_size=2, padding='same', activation='relu'))\n",
+        "model.add(Conv2D(filters=32, kernel_size=2, padding='same', strides=(1, 1), activation='relu'))\n",
         "model.add(MaxPooling2D(pool_size=3, strides=3))\n",
         "model.add(Dropout(0.5))\n",
         "model.add(Flatten())\n",
