--- a/7 - Transfer Learning/inception.ipynb
+++ b/7 - Transfer Learning/inception.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Copy of Untitled57.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNc+ySgZ0sIoa2h1dWaFZPH",
+      "authorship_tag": "ABX9TyMdrdZz2Sym74R8Lfd0HEM/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,9 +32,9 @@
         "colab_type": "text"
       },
       "source": [
-        "# Generatori di Immagini\n",
-        "Spesso capita di dover addestrare una rete neurale su una mole di dati talmente grande da non riuscire a risiedere sulla memoria del nostro PC. A questo scopo tf.keras ci mette a disposizione i generatori, uno strumento che permette di caricare le immagini in batch durante la fase di addestramento.<br>\n",
-        "In questo notebook vedremo come utilizzare i generatori per addestrare una rete neurale in grado di distinguere 5 diversi tipi di dessert, utilizzando un dataset di 10.000 immagini."
+        "# Transfer Learning\n",
+        "Il **Transfer Learning** è una tecnica che consiste nel riutilizzare tutti o una parte degli strati nascosti di una rete neurale già addestrata all'interno di un'altra rete neurale che ha lo scopo di risolvere un problema simile. In questo modo possiamo sfruttare la conoscenza che la rete ha già acquisito, piuttosto che partire da zero.\n",
+        "In questo notebook vedremo come sfruttare il transfer learning per il riconoscimento di dessert."
       ]
     },
     {
@@ -44,15 +44,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Scarichiamo il Dataset\n",
-        "Il dataset che utilizzeremo è un'estratto del Food101, una raccolta di 101.000 immagini appartenenti a 101 categorie di cibi. Nel nostr caso le categorie sono solamente le seguenti: \n",
-        " - cannoli\n",
-        " - gelato\n",
-        " - panna cotta\n",
-        " - tiramisu\n",
-        " - torta di mele\n",
-        "\n",
-        "All'interno dell'archivio troviamo sia la cartella con 10.000 immagini per l'addestramento, 2000 per classe, e la cartella con 1250 immagini per il test, 250 per classe."
+        "## Scarichiamo il Dataset"
       ]
     },
     {
@@ -120,7 +112,7 @@
         "\n",
         "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -147,7 +139,7 @@
         "TOT_IMAGES = 10000 \n",
         "IMG_SIZE = (228, 228)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -158,45 +150,6 @@
       },
       "source": [
         "## Creiamo il Generatore"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ngy6n2S40d6P",
-        "colab_type": "text"
-      },
-      "source": [
-        "Possiamo creare il generatore utilizzando la classe *ImageDataGenerator* di tf.keras, al suo interno possiamo definire la dimensione del set di validazione."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "SoCKyAzZ0auH",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "datagen_train = ImageDataGenerator(validation_split=0.1, rescale=1./255,)"
-      ],
-      "execution_count": 3,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "6e7j_sUf1yXs",
-        "colab_type": "text"
-      },
-      "source": [
-        "tramite il parametro *rescale* abbiamo definito come normalizzare le immagini, cioè dividendo per 255.<br>\n",
-        "Ora per creare i generatori di immagini, utilizziamo il metodo *flow_from_directory*, specificando:\n",
-        " - il path al set di immagini\n",
-        " - *target_size*: la dimensione da utilizzare per le immagini\n",
-        " - *batch_size*: la dimensione di ogni batch di immagini\n",
-        " - *class_mode*: la tipologia di classificazione, multiclasse (categorical) o binaria (binary).\n",
-        " - *subset*: qui possiamo specificare se si tratta del set di training o di validazione."
       ]
     },
     {
@@ -211,6 +164,8 @@
         "outputId": "c457fe5f-5a3e-47dd-de62-e5a932dade1c"
       },
       "source": [
+        "datagen_train = ImageDataGenerator(validation_split=0.1, rescale=1./255,)\n",
+        "\n",
         "train_generator = datagen_train.flow_from_directory(\n",
         "        DATASET_DIR+\"train\", \n",
         "        target_size=IMG_SIZE, \n",
@@ -227,7 +182,7 @@
         "\n",
         "print(train_generator.class_indices)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,16 +193,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ZKCmrA7d2zxF",
-        "colab_type": "text"
-      },
-      "source": [
-        "Ora creiamo anche un generatore per il Test Set"
       ]
     },
     {
@@ -272,7 +217,7 @@
         "\n",
         "print(test_generator.class_indices)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -291,8 +236,8 @@
         "colab_type": "text"
       },
       "source": [
-        "## Addestriamo la Rete Neurale Convoluzionale sul Generatore\n",
-        "Definiamo l'architettura della rete, trattandosi di un problema abbastanza complesso utilizzeremo diversi strati, insieme a dropout e regolarizzazione L2 per cercare di limitare l'overfiting."
+        "## Carichiamo una rete pre-addestrata\n",
+        "Carichiamo una rete InceptionV3 utilizzando tf.keras."
       ]
     },
     {
@@ -310,7 +255,7 @@
         "base_model = tf.keras.applications.InceptionV3(input_shape = (228, 228, 3), include_top=False, weights='imagenet')\n",
         "base_model.summary()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -986,6 +931,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SsluunglUMco",
+        "colab_type": "text"
+      },
+      "source": [
+        "Questa rete ha quasi 22 milioni di parametri, già ottimizzati per il riconoscimento di immagini. Durante il processo di addestramento non dobbiamo andare a modificare i parametri degli strati di questa rete, per farlo ci basta iterare su ogni strato e impostare l'attributo trainable a False."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "QwznIOj21fNm",
@@ -1002,7 +957,7 @@
         "\n",
         "base_model.summary()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1678,6 +1633,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AxGovcN6UsQA",
+        "colab_type": "text"
+      },
+      "source": [
+        "Per la nostra rete, utilizzeremo tutti gli strati nascosti di questo modello fino allo strato *mixed7*. Prendiamo l'output di questo strato e salviamolo in una variabile."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "LjjaDDnV2GDU",
@@ -1693,7 +1658,7 @@
         "print('last layer output shape: ', last_layer.output_shape)\n",
         "last_output = last_layer.output"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1702,6 +1667,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yHO87CAlVKqI",
+        "colab_type": "text"
+      },
+      "source": [
+        "Ora sfruttando le API funzionali di tf.keras definiamo l'architettura della nostra rete neurale."
       ]
     },
     {
@@ -1720,11 +1695,33 @@
         "x = Flatten()(x)\n",
         "x = Dense(1024, activation='relu')(x)\n",
         "x = Dropout(0.2)(x)                  \n",
-        "x = Dense (5, activation='softmax')(x)           \n",
-        "\n",
-        "model = Model(base_model.input, x) "
+        "x = Dense (5, activation='softmax')(x)           "
       ],
-      "execution_count": 32,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XkYCjyQZVSlC",
+        "colab_type": "text"
+      },
+      "source": [
+        "Utilizzando la classe *Model* di tf.keras, creaiamo un nuovo modello mettendo insieme il modello base, derivante dall'InceptionV3, e il modello con gli strati definiti da noi."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JgMBmkYsVUOx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model = Model(base_model.input, x) \n",
+        "model.summary()"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1734,7 +1731,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Per avviare l'addestramento ci basterà passare al metodo *fit* il generatore di addestramento e l'eventuale generatore di validazione. Dobbiamo solo stare attenti a specificare il numero di steps per ogni epoca del Gradient Descent, perché quando utilizziamo i generatori Tensorflow non è in grado di ottenere questo valore automaticamente, solitamente basta utilizzare: NUMERO_DI_IMMAGINI_NEL_SET/DIMENSIONE_DEL_BATCH."
+        "Adesso possiamo avviare l'addestramento del modello, durante l'addestramento verranno ottimizzati solo i parametri degli strati che abbiamo definito noi, mentre quelli dell'InceptionV3 rimarranno inalterati."
       ]
     },
     {
@@ -1763,7 +1760,7 @@
         "        validation_steps=int(TOT_IMAGES*0.1 // BATCH_SIZE),\n",
         "        epochs=100)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1848,12 +1845,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "r_XPDexQV_Js",
+        "colab_type": "text"
+      },
+      "source": [
+        "Utilizzando il Transfer Learning abbiamo ottenuto dei risultati decisamente migliori."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "br7SMNPl32Ga",
         "colab_type": "text"
       },
       "source": [
-        "# Testiamo la Rete sul Generatore\n",
-        "Per testare sul generatore la Rete Neurale che abbiamo addestrato, ci basta passare il generatore al metodo *evaluate*."
+        "# Testiamo la Rete sul Generatore"
       ]
     },
     {
