--- a/9 - Word Embedding/trained_embedding.ipynb
+++ b/9 - Word Embedding/trained_embedding.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled74.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPq1LZlsI76XVRDdhdCLBBQ",
+      "authorship_tag": "ABX9TyPjw6q16M/fe3RzuQ3KHAiC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,32 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Yqr0VZYxGPgv",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Word Embedding\n",
+        "Il Word Embedding è una delle tecniche maggiormente utilizzate per la codifica del testo nel Deep Learning. Il Word Embedding ha tre benefici:\n",
+        "1. Permette di mantenere le informazioni sulla sequenza.\n",
+        "2. Permette di ridurre la dimensionalità delle osservazioni.\n",
+        "3. Permette di misurare somiglianza e attinenza delle parole.\n",
+        "\n",
+        "Il suo risultato è una matrice, all'interno delle varie colonne le parole attinenti avranno valori simili. In questo notebook vedremo come addestrare una rete neurale a riconoscere recensioni negative, utilizzando il Word Embedding per la codifica del testo."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zTFZChaDHF1v",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Importiamo i Moduli"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "QnhPU1Tbt0K3",
@@ -42,8 +68,18 @@
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import Embedding, Dense, Flatten, Dropout"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dbtuwIVxHHmf",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Definiamo le Costanti"
+      ]
     },
     {
       "cell_type": "code",
@@ -57,8 +93,19 @@
         "NUM_EMBEDDING = 50\n",
         "SEQ_MAX_LENGTH = 50"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tMK9bVzwHJTh",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Scarichiamo il Dataset\n",
+        "Il dataset che utilizziamo è l'IMDB Movies Reviews Dataset, un dataset contenente 70.000 recensioni di film classificate come positive o negative. Definiamo una funzione per scaricare il datset e ottenere recensioni e labels in due liste Python."
+      ]
     },
     {
       "cell_type": "code",
@@ -100,7 +147,7 @@
         "    \n",
         "    return(reviews,y)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -122,7 +169,7 @@
         "print(reviews_test[0])\n",
         "print(\"Sentiment: %d\" % y_test[0])"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,6 +180,17 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Z0Pbl9X5Had_",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Preprocessing del Testo\n",
+        "Il primo passo per la preparazione del testo consiste nel convertire tutte le parole in numeri, per farlo possiamo utilizzare la tokenizzazione, la quale consiste nel creare un dizionario con tutte le parole presenti all'interno del nostro corpo di testo per poi sostituire, per ogni recensione, ogni parola con un valore numerico che rappresenta la posizione della parola all'interno del dizionario."
       ]
     },
     {
@@ -155,7 +213,7 @@
         "\n",
         "X_test[0]"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -708,6 +766,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kE3fJiTkHzPX",
+        "colab_type": "text"
+      },
+      "source": [
+        "Tramite il parametro num_words abbiamo limitato la dimensione del dizionario alle 10.000 parole più frequenti. Le recensioni hanno ovviamente lunghezza differente, vediamo quanto questa varia."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "dwsAclSTxoYR",
@@ -725,7 +793,7 @@
         "print(\"La review più lunga ha %d parole\" % len(longest_review))\n",
         "print(\"La review più corta ha %d parole\" % len(shortest_review))"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -735,6 +803,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "y0UpU8XsIALz",
+        "colab_type": "text"
+      },
+      "source": [
+        "La lunghezza di ogni recensione varia moltissimo ! Per addestrare una rete neurale dobbiamo fare in modo che ogni esempio abbia la stessa lunghezza, per farlo possiamo fissare una lughezza massima, in questo caso 50 parole, e poi troncare le recensioni più lunghe oppure aggiungere degli zeri al termine delle recensioni più bravi. Possiamo fare entrambie le cose semplicemente utilizzando la funzione *pad_sequences* di tf.keras."
       ]
     },
     {
@@ -754,7 +832,7 @@
         "\n",
         "X_train.shape"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -771,6 +849,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4q74om4zIZSx",
+        "colab_type": "text"
+      },
+      "source": [
+        "Abbiamo quasi finito, come ultimo step convertiamo le liste con i labels in array numpy, dato che l'embedding richiede che i dati siano di questo tipo."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "H83eJmz90OdG",
@@ -781,8 +869,25 @@
         "y_train = np.array(y_train)\n",
         "y_test = np.array(y_test)"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "g98sZAJsIkuS",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Creiamo la Rete Neurale con lo Strato di Embedding\n",
+        "Per definire uno strato di embedding ci basta utilizzare la classe *Embedding* di tf.keras, questa ha bisogno dei seguenti parametri:\n",
+        "\n",
+        "1. Numero di parole nel dizionario.\n",
+        "2. Numero di vettori di embedding (o colonne della matrice di embedding).\n",
+        "3. Dimensione massima della lunghezza.\n",
+        "\n",
+        "Dato che l'output di uno strato di embedding è una matrice, per poter passare i dati ad uno strato Denso dobbiamo eseguire il Flattening."
+      ]
     },
     {
       "cell_type": "code",
@@ -796,7 +901,6 @@
         "outputId": "3b6d3d35-adb0-4c64-cb1d-e20693f3f894"
       },
       "source": [
-        "model = Sequential()\n",
         "\n",
         "model.add(Embedding(MAX_WORDS, NUM_EMBEDDING, input_length=SEQ_MAX_LENGTH))\n",
         "model.add(Dropout(0.5))\n",
@@ -809,7 +913,7 @@
         "\n",
         "model.summary()"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -844,6 +948,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zOPCnEOoJEwY",
+        "colab_type": "text"
+      },
+      "source": [
+        "Ora addestriamo la Rete."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Hh3okaPVyv4j",
@@ -858,7 +972,7 @@
         "model.compile(loss='binary_crossentropy', optimizer=\"adam\", metrics=['accuracy'])\n",
         "model.fit(X_train, y_train, batch_size=512, validation_split=0.2, epochs=10)"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -901,6 +1015,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "V6yWtfXbJG3D",
+        "colab_type": "text"
+      },
+      "source": [
+        "E valutiamola sul set di test."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "fpeM-U8-2o8G",
@@ -914,7 +1038,7 @@
       "source": [
         "model.evaluate(X_test, y_test)"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -940,11 +1064,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "v7xaE4SEJJN1",
+        "colab_type": "text"
+      },
+      "source": [
+        "Il risultato è discreto."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "zU_f4-c92ncN",
         "colab_type": "text"
       },
       "source": [
-        "## Testiamo la Rete"
+        "## Testiamo la Rete\n",
+        "Testiamo la rete su nuove recensioni scritte da noi, per ogni recensione dobbiamo convertire le parole in numeri utilizzando il tokenizer che abbiamo già creato e poi aggiungere il padding (o trocare la recensione se troppo lunga)."
       ]
     },
     {
@@ -967,7 +1102,7 @@
         "y = model.predict(X)\n",
         "print(y)"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -979,6 +1114,34 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UPCwkJ1GJXyb",
+        "colab_type": "text"
+      },
+      "source": [
+        " - La prima recensione viene classificata come molto negativa, che è corretto.\n",
+        " - La seconda recensione viene classificata come leggermente positiva, mentre il realtà è decisamente positiva.\n",
+        " - La terza recensione viene classificata come negativa, quando in realtà sembra essere neutrale.\n",
+        "\n",
+        "\n",
+        " La terza recensione viene classificata come negativa perché contiene la keyword *bad*, che è una keyword fortemente negativa. Dato che una rete neurale analizza le parole singolarmente, non riesce a tenere conto della negazione che precede la parola *bad*. Per affrontare questo problema dobbiamo utilizzare le Reti Neurali Ricorrenti."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gPGyDqswKC0H",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
